# simple-app

./: com.github.jgildred.simple-app.yml  meson.build
.flatpak-builder/cache/: summary
.flatpak-builder/cache/refs/heads/app/com.github.jgildred.gtk-hello/x86_64/: master
.flatpak-builder/cache/refs/heads/app/com.github.jgildred.simple-app/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.jgildred.gtk_hello.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.jgildred.gtk_hello.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.jgildred.simple_app.Debug/x86_64/: master
.flatpak-builder/cache/refs/heads/runtime/com.github.jgildred.simple_app.Locale/x86_64/: master
.flatpak-builder/cache/refs/heads/x86_64-com.github.jgildred.gtk-hello.yml/: build-gtk-hello  cleanup  finish  init
.flatpak-builder/cache/refs/heads/x86_64-com.github.jgildred.simple-app.yml/: build-simple-app  cleanup  finish  init
.flatpak-builder/checksums/: x86_64-com.github.jgildred.gtk-hello.yml  x86_64-com.github.jgildred.simple-app.yml
data/: simple-app.appdata.xml.in
po/: POTFILES  com.github.jgildred.simple-app.pot  de.po  es.po
src/: Application
